java :: use getFirst() on lists; @Serial; dangling doc comments